# cmake_vanilla

./: CMakeLists.txt  README.md  build.sh  stl.h
cmake/: CheckPlatform.cmake  Clang.cmake  ConfigureBaseTargets.cmake  GNU.cmake  MSVC.cmake
common/: auction_table.h  building.h  item_length.h  length.h  pool.h  service.h  tables.h
db/: CMakeLists.txt
db/src/: AuctionManager.cpp  AuctionManager.h  BlockCountry.cpp  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerLogin.cpp  ClientManagerPlayer.cpp  Config.cpp  CsvReader.cpp  CsvReader.h  DBManager.h  GuildManager.cpp  GuildManager.h  HB.cpp  ItemAwardManager.cpp  ItemIDRangeManager.cpp  Main.cpp  Marriage.cpp  Monarch.cpp  Peer.h  PrivManager.cpp  ProtoReader.cpp  QID.h  grid.cpp  version.cpp
game/: CMakeLists.txt
game/src/: BattleArena.cpp  ClientPackageCryptInfo.cpp  Depend  DragonLair.cpp  DragonSoul.cpp  DragonSoul.h  FileMonitor_FreeBSD.cpp  MarkConvert.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  OXEvent.cpp  PetSystem.cpp  SpeedServer.cpp  SpeedServer.h  affect.h  ani.cpp  arena.cpp  arena.h  auction_manager.cpp  auction_manager.h  banword.cpp  battle.cpp  battle.h  belt_inventory_helper.h  blend_item.cpp  block_country.cpp  buff_on_attributes.cpp  building.cpp  castle.cpp  char.cpp  char.h  char_affect.cpp  char_battle.cpp  char_change_empire.cpp  char_dragonsoul.cpp  char_horse.cpp  char_item.cpp  char_manager.cpp  char_manager.h  (+132 more)
liblua/: CMakeLists.txt
libpoly/: CMakeLists.txt
libsql/: CMakeLists.txt
libthecore/: CMakeLists.txt
libthecore/include/: buffer.h  hangul.h  kstbl.h  log.h  main.h  socket.h  stdafx.h  utils.h
libthecore/src/: buffer.cpp  hangul.cpp  heart.cpp  kstbl.cpp  log.cpp  main.cpp  signal.cpp  socket.cpp  tea.cpp  utils.cpp  xdirent.cpp
quest/: CMakeLists.txt  qc.cpp
