set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libc++ --std=c++14 -DCRYPTOPP_DISABLE_ASM -pipe -msse2 -mssse3 -m32 -Ofast -Ofast -g0 -DNDEBUG")
set(SOURCE
src/BattleArena.h
src/BlueDragon.h
src/BlueDragon_Binder.h
src/BlueDragon_Skill.h
src/ClientPackageCryptInfo.h
src/DragonLair.h
src/DragonSoul.h
src/FSM.h
src/FileMonitor_FreeBSD.h
src/IFileMonitor.h
src/MarkImage.h
src/MarkManager.h
src/OXEvent.h
src/PetSystem.h
src/SpeedServer.h
src/TrafficProfiler.h
src/affect.h
src/affect_flag.h
src/ani.h
src/any_function.h
src/arena.h
src/auction_manager.h
src/auction_packet.h
src/banword.h
src/battle.h
src/belt_inventory_helper.h
src/blend_item.h
src/block_country.h
src/buff_on_attributes.h
src/buffer_manager.h
src/building.h
src/castle.h
src/char.h
src/char_manager.h
src/cipher.h
src/cmd.h
src/config.h
src/constants.h
src/crc32.h
src/cube.h
src/db.h
src/debug_allocator.h
src/debug_allocator_adapter.h
src/debug_ptr.h
src/desc.h
src/desc_client.h
src/desc_manager.h
src/desc_p2p.h
src/dev_log.h
src/dragon_soul_table.h
src/dungeon.h
src/empire_text_convert.h
src/entity.h
src/event.h
src/event_queue.h
src/exchange.h
src/fifo_allocator.h
src/file_loader.h
src/fishing.h
src/gm.h
src/group_text_parse_tree.h
src/guild.h
src/guild_manager.h
src/horse_rider.h
src/horsename_manager.h
src/input.h
src/ip_ban.h
src/item.h
src/item_addon.h
src/item_manager.h
src/item_manager_private_types.h
src/locale_service.h
src/log.h
src/login_data.h
src/login_sim.h
src/lua_incl.h
src/lzo_manager.h
src/malloc_allocator.h
src/map_location.h
src/marriage.h
src/messenger_manager.h
src/mining.h
src/mob_manager.h
src/monarch.h
src/motion.h
src/object_allocator.h
src/over9refine.h
src/p2p.h
src/packet.h
src/packet_info.h
src/panama.h
src/party.h
src/polymorph.h
src/pool.h
src/priv_manager.h
src/profiler.h
src/protocol.h
src/pvp.h
src/quest.h
src/questevent.h
src/questlua.h
src/questmanager.h
src/questnpc.h
src/questpc.h
src/refine.h
src/regen.h
src/safebox.h
src/sectree.h
src/sectree_manager.h
src/sequence.h
src/shop.h
src/shopEx.h
src/shop_manager.h
src/skill.h
src/skill_power.h
src/spam.h
src/spamblock.h
src/stable_priority_queue.h
src/start_position.h
src/state.h
src/stdafx.h
src/target.h
src/text_file_loader.h
src/threeway_war.h
src/typedef.h
src/unique.h
src/unique_item.h
src/utils.h
src/vector.h
src/vid.h
src/war_map.h
src/wedding.h
src/xmas_event.h
src/BattleArena.cpp
src/BlueDragon.cpp
src/BlueDragon_Binder.cpp
src/ClientPackageCryptInfo.cpp
src/DragonLair.cpp
src/DragonSoul.cpp
src/FSM.cpp
src/FileMonitor_FreeBSD.cpp
src/MarkConvert.cpp
src/MarkImage.cpp
src/MarkManager.cpp
src/OXEvent.cpp
src/PetSystem.cpp
src/SpeedServer.cpp
src/TrafficProfiler.cpp
src/affect.cpp
src/ani.cpp
src/arena.cpp
src/auction_manager.cpp
src/banword.cpp
src/battle.cpp
src/blend_item.cpp
src/block_country.cpp
src/buff_on_attributes.cpp
src/buffer_manager.cpp
src/building.cpp
src/castle.cpp
src/char.cpp
src/char_affect.cpp
src/char_battle.cpp
src/char_change_empire.cpp
src/char_dragonsoul.cpp
src/char_horse.cpp
src/char_item.cpp
src/char_manager.cpp
src/char_message.cpp
src/char_quickslot.cpp
src/char_resist.cpp
src/char_skill.cpp
src/char_state.cpp
src/cipher.cpp
src/cmd.cpp
src/cmd_emotion.cpp
src/cmd_general.cpp
src/cmd_gm.cpp
src/cmd_oxevent.cpp
src/config.cpp
src/constants.cpp
src/crc32.cpp
src/cube.cpp
src/db.cpp
src/desc.cpp
src/desc_client.cpp
src/desc_manager.cpp
src/desc_p2p.cpp
src/dev_log.cpp
src/dragon_soul_table.cpp
src/dungeon.cpp
src/empire_text_convert.cpp
src/entity.cpp
src/entity_view.cpp
src/event.cpp
src/event_queue.cpp
src/exchange.cpp
src/file_loader.cpp
src/fishing.cpp
src/gm.cpp
src/group_text_parse_tree.cpp
src/guild.cpp
src/guild_manager.cpp
src/guild_war.cpp
src/horse_rider.cpp
src/horsename_manager.cpp
src/input.cpp
src/input_auth.cpp
src/input_db.cpp
src/input_login.cpp
src/input_main.cpp
src/input_p2p.cpp
src/input_teen.cpp
src/input_udp.cpp
src/ip_ban.cpp
src/item.cpp
src/item_addon.cpp
src/item_attribute.cpp
src/item_manager.cpp
src/item_manager_idrange.cpp
src/item_manager_read_tables.cpp
src/locale.cpp
src/locale_service.cpp
src/log.cpp
src/login_data.cpp
src/lzo_manager.cpp
src/main.cpp
src/map_location.cpp
src/marriage.cpp
src/messenger_manager.cpp
src/mining.cpp
src/mob_manager.cpp
src/monarch.cpp
src/motion.cpp
src/over9refine.cpp
src/p2p.cpp
src/packet_info.cpp
src/panama.cpp
src/party.cpp
src/polymorph.cpp
src/priv_manager.cpp
src/pvp.cpp
src/questevent.cpp
src/questlua.cpp
src/questlua_affect.cpp
src/questlua_arena.cpp
src/questlua_ba.cpp
src/questlua_building.cpp
src/questlua_danceevent.cpp
src/questlua_dragonlair.cpp
src/questlua_dragonsoul.cpp
src/questlua_dungeon.cpp
src/questlua_forked.cpp
src/questlua_game.cpp
src/questlua_global.cpp
src/questlua_guild.cpp
src/questlua_horse.cpp
src/questlua_item.cpp
src/questlua_marriage.cpp
src/questlua_message.cpp
src/questlua_mgmt.cpp
src/questlua_monarch.cpp
src/questlua_mysql.cpp
src/questlua_npc.cpp
src/questlua_oxevent.cpp
src/questlua_party.cpp
src/questlua_pc.cpp
src/questlua_pet.cpp
src/questlua_quest.cpp
src/questlua_speedserver.cpp
src/questlua_target.cpp
src/questlua_unique.cpp
src/questmanager.cpp
src/questnpc.cpp
src/questpc.cpp
src/refine.cpp
src/regen.cpp
src/safebox.cpp
src/sectree.cpp
src/sectree_manager.cpp
src/sequence.cpp
src/shop.cpp
src/shopEx.cpp
src/shop_manager.cpp
src/skill.cpp
src/skill_power.cpp
src/spamblock.cpp
src/start_position.cpp
src/target.cpp
src/text_file_loader.cpp
src/threeway_war.cpp
src/trigger.cpp
src/unique.cpp
src/utils.cpp
src/vector.cpp
src/version.cpp
src/war_map.cpp
src/wedding.cpp
src/xmas_event.cpp
src/any_function.inc
)
add_executable(game ${SOURCE})
target_link_libraries(game
 PRIVATE 
  libgame libsql libpoly libthecore liblua
 PUBLIC
   pthread mysqlclient IL lzo2 md m cryptopp gtest jpeg ssl
)
