set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -pipe -msse2 -mssse3 -m32 -fno-exceptions --std=c++1z --stdlib=libc++ -DCRYPTOPP_DISABLE_ASM")
set(SOURCE
include/buffer.h
include/crypt.h
include/fdwatch.h
include/hangul.h
include/heart.h
include/kstbl.h
include/log.h
include/main.h
include/memcpy.h
include/signal.h
include/socket.h
include/stdafx.h
include/typedef.h
include/utils.h
include/xdirent.h
include/xgetopt.h
include/xmd5.h
src/DES_table.h
src/buffer.cpp
src/des.cpp
src/fdwatch.cpp
src/gost.cpp
src/hangul.cpp
src/heart.cpp
src/kstbl.cpp
src/log.cpp
src/main.cpp
src/memcpy.cpp
src/signal.cpp
src/socket.cpp
src/tea.cpp
src/utils.cpp
src/xdirent.cpp
src/xgetopt.cpp
src/xmd5.cpp
)
include_directories(include)
add_library(libthecore STATIC ${SOURCE})